# WebRTC-Video-Streaming-Application

./: .gitignore  CMakeLists.txt  README.md  package.json
server/: server.js
src/: gstreamer_pipeline.cpp  gstreamer_pipeline.h  main.cpp  signaling_server.cpp  signaling_server.h  video_capture.cpp  video_capture.h  webrtc_streamer.cpp  webrtc_streamer.h
web/: index.html  main.js  style.css
